force-app/main/default/objects/SFDC_Due_Diligence_Project__c/SFDC_Due_Diligence_Project__c.object-meta.xml
<CustomObject>
    <description>Due diligence projects. Reviews and issues roll up to this object.</description>
    <label>Due Diligence Project</label>
    <nameField>
        <label>Due Diligence Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Due Diligence Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>