force-app/main/default/objects/SFDC_Due_Diligence_Project__c/fields/Customer_Diligence__c.field-meta.xml
<CustomField>
    <fullName>Customer_Diligence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you plan to perform customer diligence as part of this project.</description>
    <label>Customer Diligence</label>
    <type>Checkbox</type>
</CustomField>