force-app/main/default/objects/SFDC_Due_Diligence_Project__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the due diligence project.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>