force-app/main/default/objects/SFDC_Due_Diligence_Project__c/fields/Diligence_Manager__c.field-meta.xml
<CustomField>
    <fullName>Diligence_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Diligence manager. All tasks will be assigned to this user.</description>
    <label>Diligence Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Due_Diligence_Project</relationshipName>
    <type>Lookup</type>
</CustomField>