force-app/main/default/objects/SFDC_Due_Diligence_Project__c/fields/Diligence_Stage__c.field-meta.xml
<CustomField>
    <fullName>Diligence_Stage__c</fullName>
    <label>Diligence Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Start-up</fullName>
                <default>true</default>
                <label>Start-up</label>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Executing</fullName>
            </value>
            <value>
                <fullName>Closing Down</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>