force-app/main/default/objects/SFDC_Due_Diligence_Project__c/fields/Financial_Diligence__c.field-meta.xml
<CustomField>
    <fullName>Financial_Diligence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you plan to perform financial diligence.</description>
    <label>Financial Diligence</label>
    <type>Checkbox</type>
</CustomField>