force-app/main/default/objects/SFDC_Due_Diligence_Project__c/fields/HR_Diligence__c.field-meta.xml
<CustomField>
    <fullName>HR_Diligence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you plan to perform HR diligence.</description>
    <label>HR Diligence</label>
    <type>Checkbox</type>
</CustomField>