force-app/main/default/objects/SFDC_Due_Diligence_Project__c/fields/Legal_IP_Diligence__c.field-meta.xml
<CustomField>
    <fullName>Legal_IP_Diligence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you plan to perform legal / IP diligence.</description>
    <label>Legal / IP Diligence</label>
    <type>Checkbox</type>
</CustomField>