force-app/main/default/objects/SFDC_Due_Diligence_Project__c/fields/Open_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Open_Tasks__c</fullName>
    <formula>End_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>