force-app/main/default/objects/SFDC_Due_Diligence_Project__c/fields/Target_Company__c.field-meta.xml
<CustomField>
    <fullName>Target_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Target company that diligence project relates to.</description>
    <label>Target Company</label>
    <referenceTo>SFDC_Target_Company__c</referenceTo>
    <relationshipName>Due_Diligence_Project</relationshipName>
    <type>Lookup</type>
</CustomField>